# nm-rs

./: .gitmodules  Cargo.toml  Gir.toml  LICENSE  README.md  flake.nix  versions.txt
examples/: get_device_type.rs  get_password.rs
gir/: NM-1.0.gir
libnm-sys/: Cargo.toml  Gir.toml  versions.txt
libnm-sys/src/: lib.rs
libnm-sys/tests/: layout.c
src/: lib.rs  prelude.rs  remote_connection.rs  setting_wireless.rs  variant_attribute_spec.rs  vpn_editor_plugin_vt.rs
src/auto/: access_point.rs  active_connection.rs  bridge_vlan.rs  checkpoint.rs  client.rs  connection.rs  constants.rs  device.rs  device6_lowpan.rs  device_adsl.rs  device_bond.rs  device_bridge.rs  device_bt.rs  device_dummy.rs  device_ethernet.rs  device_generic.rs  device_hsr.rs  device_infiniband.rs  device_ip_tunnel.rs  device_ipvlan.rs  device_loopback.rs  device_macsec.rs  device_macvlan.rs  device_modem.rs  device_olpc_mesh.rs  device_ovs_bridge.rs  device_ovs_port.rs  device_ppp.rs  device_team.rs  device_tun.rs  device_veth.rs  device_vlan.rs  device_vrf.rs  device_vxlan.rs  device_wifi.rs  device_wifi_p2p.rs  device_wimax.rs  device_wire_guard.rs  device_wpan.rs  dhcp_config.rs  (+88 more)
sys/: Cargo.toml  build.rs  versions.txt
sys/src/: lib.rs
sys/tests/: abi.rs  constant.c
