[package]
name = "libnm-api"
version = "0.1.0"
edition = "2024"
authors = ["Daru-san"]
categories = ["api-bindings"]
homepage = "https://github.com/Daru-san/nm-rs"
license = "MIT"
repository = "https://github.com/Daru-san/nm-rs"
description = "Rust bindings for the libnm library."

[dependencies]
gio = "0.21.5"
glib = "0.21.5"
libnm-api-sys = { path = "sys", version = "0.1.0" }

[features]
default = [
    "v1_2",
    "v1_4",
    "v1_6",
    "v1_8",
    "v1_10",
    "v1_12",
    "v1_14",
    "v1_16",
    "v1_18",
    "v1_20",
    "v1_40",
    "v1_42",
]
v1_2 = ["libnm-api-sys/v1_2"]
v1_4 = ["libnm-api-sys/v1_4"]
v1_6 = ["libnm-api-sys/v1_6"]
v1_8 = ["libnm-api-sys/v1_8"]
v1_10 = ["libnm-api-sys/v1_10"]
v1_12 = ["libnm-api-sys/v1_12"]
v1_14 = ["libnm-api-sys/v1_14"]
v1_16 = ["libnm-api-sys/v1_16"]
v1_18 = ["libnm-api-sys/v1_18"]
v1_20 = ["libnm-api-sys/v1_20"]
v1_22 = ["libnm-api-sys/v1_22"]
v1_24 = ["libnm-api-sys/v1_24"]
v1_26 = ["libnm-api-sys/v1_26"]
v1_28 = ["libnm-api-sys/v1_28"]
v1_30 = ["libnm-api-sys/v1_30"]
v1_32 = ["libnm-api-sys/v1_32"]
v1_34 = ["libnm-api-sys/v1_34"]
v1_36 = ["libnm-api-sys/v1_36"]
v1_38 = ["libnm-api-sys/v1_38"]
v1_40 = ["libnm-api-sys/v1_40"]
v1_42 = ["libnm-api-sys/v1_42"]
v1_44 = ["libnm-api-sys/v1_44"]
v1_46 = ["libnm-api-sys/v1_46"]
v1_48 = ["libnm-api-sys/v1_48"]
v1_50 = ["libnm-api-sys/v1_50"]
v1_52 = ["libnm-api-sys/v1_52"]
v1_54 = ["libnm-api-sys/v1_54"]
gio_v2_22 = []

[workspace]
members = ["sys"]
