[package]
name = "nm-rs"
version = "0.1.0"
edition = "2024"
authors = ["Daru-san"]
categories = ["api-bindings"]
homepage = "https://github.com/Daru-san/nm-rs"
license = "MIT"
repository = "https://github.com/Daru-san/nm-rs"
description = "Rust bindings for the libnm library."

[dependencies]
gio = "0.21.5"
glib = "0.21.5"
nm-rs-sys = { version = "0.1.0", path = "sys" }
[features]
default = [
    "v1_2",
    "v1_4",
    "v1_6",
    "v1_8",
    "v1_10",
    "v1_12",
    "v1_14",
    "v1_16",
    "v1_18",
    "v1_20",
    "v1_40",
    "v1_42",
]
v1_2 = ["nm-rs-sys/v1_2"]
v1_4 = ["nm-rs-sys/v1_4"]
v1_6 = ["nm-rs-sys/v1_6"]
v1_8 = ["nm-rs-sys/v1_8"]
v1_10 = ["nm-rs-sys/v1_10"]
v1_12 = ["nm-rs-sys/v1_12"]
v1_14 = ["nm-rs-sys/v1_14"]
v1_16 = ["nm-rs-sys/v1_16"]
v1_18 = ["nm-rs-sys/v1_18"]
v1_20 = ["nm-rs-sys/v1_20"]
v1_22 = ["nm-rs-sys/v1_22"]
v1_24 = ["nm-rs-sys/v1_24"]
v1_26 = ["nm-rs-sys/v1_26"]
v1_28 = ["nm-rs-sys/v1_28"]
v1_30 = ["nm-rs-sys/v1_30"]
v1_32 = ["nm-rs-sys/v1_32"]
v1_34 = ["nm-rs-sys/v1_34"]
v1_36 = ["nm-rs-sys/v1_36"]
v1_38 = ["nm-rs-sys/v1_38"]
v1_40 = ["nm-rs-sys/v1_40"]
v1_42 = ["nm-rs-sys/v1_42"]
v1_44 = ["nm-rs-sys/v1_44"]
v1_46 = ["nm-rs-sys/v1_46"]
v1_48 = ["nm-rs-sys/v1_48"]
v1_50 = ["nm-rs-sys/v1_50"]
v1_52 = ["nm-rs-sys/v1_52"]
v1_54 = ["nm-rs-sys/v1_54"]
gio_v2_22 = []

[workspace]
members = ["sys"]

[[example]]
name = "get_password"
crate-type = ["bin"]

[[example]]
name = "get_device_type"
crate-type = ["bin"]
